# xmrs

./: Cargo.toml  README.md
crates/randxorshift/: Cargo.toml
crates/randxorshift/examples/: test_triplets.rs
crates/xorshift/: Cargo.toml  README.md
crates/xorshift/src/: lib.rs
examples/: infos.rs  it.rs  sid.rs  xmi.rs  xmrs.rs
src/: effect.rs  envelope.rs  instr_default.rs  instr_ekn.rs  instr_midi.rs  instr_opl.rs  instr_sid.rs  instr_vibrato.rs  lib.rs  module.rs  note.rs  patternslot.rs  period_helper.rs  period_helper_cache.rs  pitch.rs  prelude.rs  sample.rs  track_unit.rs  vibrato.rs  waveform.rs  xorshift.rs
src/amiga/: amiga_module.rs  amiga_sample.rs  element.rs
src/import/: import_loader.rs  import_memory.rs  mod.rs  mod_xm_effect.rs  orders_helper.rs  patternslot.rs  track_import_effect.rs  track_import_unit.rs  xm_effect.rs
src/import/amiga/: amiga_module.rs  amiga_sample.rs  mod.rs  patternslot.rs
src/import/it/: bitreader.rs  it_edit_history.rs  it_effect.rs  it_header.rs  it_instrument.rs  it_midi_macros.rs  it_module.rs  it_pattern.rs  it_plugins.rs  it_sample_header.rs  it_x_names.rs  mod.rs
src/import/s3m/: s3m_effect.rs  s3m_module.rs
src/import/sid/: instr_helper.rs  pattern_helper.rs  sid_module.rs
src/it/: it_edit_history.rs  it_header.rs  it_instrument.rs  it_module.rs  it_pattern.rs  it_plugins.rs  it_sample_header.rs  it_x_names.rs  mod.rs  serde_helper.rs
src/s3m/: s3m_module.rs
src/sid/: instr_helper.rs  pattern_helper.rs
src/xm/: xminstrument.rs  xmmodule.rs  xmpattern.rs  xmpatternslot.rs  xmsample.rs
(+10 files in other folders)
